# DuckAI-backend

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  index.html  pyproject.toml
app/: admin.py
app/migrations/: 0001_initial.py  0002_ai_image.py  0002_alter_function_description_alter_function_name.py  0002_alter_historic_choice_alter_historic_question.py  0002_alter_resume_date.py  0002_alter_translation_date.py  0002_capa.py  0002_keywords.py  0003_alter_historic_choice_alter_historic_question.py  0003_alter_translation_date.py  0003_function_icon.py  0003_question.py  0004_alter_keywords_options.py  0004_alter_resume_date.py  0005_alter_translation_date.py  0005_keywords_ai.py  0006_ai_favorite_function_historic_remove_question_user_and_more.py  0006_merge_20231124_1655.py  0007_alter_historic_ai_alter_historic_function.py  0008_chat_chathistory.py
app/models/: __init__.py  ai.py  chat.py  chatHistory.py  favorite.py  function.py  historic.py  keyWords.py  question.py  resume.py  translation.py
app/serializers/: __init__.py  ai.py  chat.py  chatHistory.py  favorite.py  function.py  historic.py  keyWords.py  question.py  resume.py  translation.py
app/views/: __init__.py  ai.py  chat.py  chatHistory.py  favorite.py  function.py  historic.py  keyWords.py  question.py  resume.py  translation.py
config/: settings.py  urls.py
hercai/: Dockerfile
src/: gpt.py  hercai.py  llama.py  search.py
uploader/: views.py
uploader/migrations/: 0001_initial.py  (+2 more)
usuario/: admin.py  cadastro.py  login.py  models.py  redefinirsenha.py  views.py
(+11 files in other folders)
